--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Look at those beautiful stars">
 
-    <title>Constellation Builder</title>
+    <title>Constellation Builder v0.6.3</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -36,6 +36,7 @@
 	<script src="core.js"></script>
     <header>
 		<h1><span id="STARRED">0 Star Points</span><span id="BUDDING" hidden>, 0 leaf(ves)</span><span id="BOLTS" hidden>, 0 bolt(s)</span><span id="COMET" hidden>, 0 comet dust(s)</span></h1>
+		<h1>You are currently generating <span id="SGAIN">1.000</span> Star Points per tick</h1>
     </header>
 	<audio id="Audio1">
 	  <source src="The Cosmos.mp3" type="audio/mp3">
@@ -71,21 +72,22 @@
     <button class="tablinks" onclick="openCity(event, 'Lava',4)" id="LavaTab" hidden>Comets</button>
     <button class="tablinks" onclick="openCity(event, 'Settings',1)">Settings</button>
     <button class="tablinks" onclick="openCity(event, 'About',1)">About</button>
-    <button class="tablinks" onclick="openCity(event, 'Help',1)" hidden>Q & A</button>
+    <button class="tablinks" onclick="openCity(event, 'Help',1)">Help</button>
 	</div>
     <div id="Stars" class="tabcontent">
 	<table><tr>
 	<td style="display:table-cell;">
     <button type="button" onclick="StarReset()" class="tooltip">Reset Star Position<span class="tooltiptext">Q - Why should I bother ?<br>A - because it doesn't resets your Star Points AND add missing stars you would have bought</span></button><br>
-	<button type="button" onclick="AddStars()" id="AS">Add another star to the sky for<br>
+	<button type="button" onclick="AddStars()" id="AS" class="tooltip"><span class="tooltiptext">More stars means more links to be possibly made !</span>Add another star to the sky for<br>
 	<span id="S1Cost">10</span> Star Points</button>
-	<button type="button" onclick="StarSpeed()" class="tooltip">Power up your stars' speed for<span class="tooltiptext">Wait, that's USELESS !!!</span><br>
+	<button type="button" onclick="StarSpeed()" class="tooltip">Power up your stars' speed for<span class="tooltiptext">Wait, that's USELESS !!!<br><br>Does this text gets dusty ? (Hint : Wait for the 4th layer !)</span><br>
 	<span id="S2Cost">10</span> Star Points</button>
-	<button type="button" onclick="StarLinks()">Link stars together more for<br>
+	<button type="button" onclick="StarLinks()" class="tooltip"><span class="tooltiptext">Each link is worth 1 star point, more links means more star points !</span>Link stars together more for<br>
 	<span id="S3Cost">10</span> Star Points</button>
-	<button type="button" onclick="StarStruck()" id='TSS'>Make constellation scanner<br>automation faster for<br>
+	<button type="button" onclick="StarStruck()" id='TSS' class="tooltip"><span class="tooltiptext">Makes this layer's ticks 10% faster upon buying !</span>Make constellation scanner<br>automation faster for<br>
 	<span id="S4Cost">10</span> Star Points</button>
-	<button type="button" onclick="PrestigeStars()" hidden id="PresStar">Prestige for ...<br>plant matter ?</button><br>
+	<button type="button" onclick="PrestigeStars()" id="PresStar">Prestige for ...<br>plant matter ?<br>(Req 1000 Star Points)</button>
+	<button type="button" onclick="BUYMAX()" class="tooltip"><span class="tooltiptext">Tries to buy every revelant upgrades once !</span>Buy All</button><br>
 	<canvas id="myCanvas0" width="512" height="512"></canvas>
     </td>
 	</tr></table>
@@ -98,11 +100,11 @@
 	<button type="button" onclick="twigUp()" id="SpeedU2">Speed up leaf pattern progress for<br>
 	<span id="TCost">2</span> leaves</button>
 	<button type="button" onclick="LeafUp2()" id="LU">Your amount of stars<br>multiply your leaves<br>10 leaves</button>
-	<button type="button" onclick="TSUp2()" id="BoltUp1.2" class="tooltip" hidden><span class="tooltiptext">Green stars cubes the star power amount given by links using them !</span>Grow up some stars<br>and have 20% chance to<br>get green stars for<br>
-	<span id="TSUp2">10000</span> leaves</button>
+	<button type="button" onclick="TSUp2()" id="BoltUp1.2" class="tooltip" hidden><span class="tooltiptext">Green stars cubes the star power amount given by links using them !<br>It's a requirement upgrade ! Doesn't consumes your leaves !</span>Grow up some stars<br>and have 20% chance to<br>get green stars<br>
+	Requires <span id="TSUp2">1e6</span> leaves</button>
 	<button type="button" onclick="newReset()" disabled id="NL" class="tooltip">Make a new pattern<span class="tooltiptext">Multiplies Leaf Power's Power by 1.5</span></button>
 	<button type="button" onclick="SaveLeaves()"><a id="DFWMB">Save as PNG</a></button>
-	<button type="button" onclick="GetBolts()" hidden id="PresBud">Call for the god of thunder<br>Francis (what a terrifying name)<br>to capture electrical bolts<br>on your pile of twigs</button><br>
+	<button type="button" onclick="GetBolts()" id="PresBud">Call for the god of thunder<br>Francis (what a terrifying name)<br>to capture electrical bolts<br>on your pile of twigs<br>(Req 100 leaves)</button><br>
 	<canvas id="myCanvas" width="256" height="256"></canvas>
     </td>
 	</tr></table>
@@ -111,8 +113,8 @@
 	<table><tr>
 	<span style="color:#FFFFFF">Square root of bolts plus one multiply your base Star point gain</span>
 	<td style="display:table-cell;">
-	<button type="button" onclick="TSUp()" id="BoltUp1" class="tooltip"><span class="tooltiptext">Yellow stars square the star power amount given by links using them !</span>Charge up some stars<br>and have 20% chance to<br>get yellow stars for<br>
-	<span id="TSUp">1</span> bolts</button>
+	<button type="button" onclick="TSUp()" id="BoltUp1" class="tooltip"><span class="tooltiptext">Yellow stars square the star power amount given by links using them !<br>It's a requirement upgrade ! Doesn't consumes your leaves !</span>Charge up some stars<br>and have 20% chance to<br>get yellow stars<br>
+	Requires <span id="TSUp">1</span> bolts</button>
 	<button type="button" onclick="BoltUp2()" id="BoltUp2">Star points also power<br>up Bolts given<br>
 	Cost 10 bolts</button>
 	<button type="button" onclick="BoltUp3()" id="BoltUp3">Bolts also power<br>up Leaves given<br>
@@ -120,7 +122,7 @@
 	<button type="button" onclick="BoltUp4()" id="BoltUp4">Leaves power also power<br>up Bolts given<br>
 	Cost 50 bolts</button>
 	<button type="button" onclick="PrestigeComet()" id="PresComet">Cast lightning upon<br>your stars to tears them<br>
-	apart and gather what's<br>left behind<br>(Req : 1000 bolts)</button><br>
+	apart and gather what's<br>left behind<br>(Req : 1e6 bolts)</button><br>
 	<canvas id="myCanvas1" width="512" height="512"></canvas>
     </td>
 	</tr></table>
@@ -130,13 +132,13 @@
 	<table><tr>
 	<td style="display:table-cell;">
 	<button type="button" onclick="CometUp1()" id="CometUp1"  class="tooltip"><span class="tooltiptext">This upgrade is TOTALLY PERMANENT !</span>Passively earn 10%<br>of leaves on prestige<br>per seconds for<br>
-	Cost <span id="C1Cost">1</span> dust</button>
+	Requires <span id="C1Cost">1</span> dust</button>
 	<button type="button" onclick="CometUp2()" id="CometUp2"  class="tooltip"><span class="tooltiptext">This upgrade is TOTALLY PERMANENT too !</span>Passively earn 10%<br>of bolts on prestige<br>per seconds for<br>
-	Cost <span id="C2Cost">10</span> dusts</button>
-	<button type="button" onclick="CometUp3()" id="CometUp3">Star speed affect<br>your gains by powering<br>it by the log of<br>the sum of speeds<br>
-	Cost 10 dusts</button>
-    <button type="button" disabled onclick="TSUp3()" id="BoltUp1.3" class="tooltip"><span class="tooltiptext">Red stars hypercubes (^4) the star power amount given by links using them !<br><br>Plus, it stops both green and yellow stars upgrades from disappearing upon comet prestige !<br><br>Requires both preceding star color upgrades to unlock it</span>Charge up some stars<br>and have 20% chance to<br>get red stars for<br>
-	<span id="TSUp3">1</span> dust</button>
+	Requires <span id="C2Cost">10</span> dusts</button>
+	<button type="button" onclick="CometUp3()" id="CometUp3" class="tooltip"><span class="tooltiptext">This will also autobuys every Constellation upgrade each tick !</span>Star speed affect<br>your gains by powering<br>it by the log of<br>the sum of speeds<br>
+	Requires 10 dusts</button>
+    <button type="button" disabled onclick="TSUp3()" id="BoltUp1.3" class="tooltip"><span class="tooltiptext">Red stars hypercubes (^4) the star power amount given by links using them !<br><br>Plus, it stops both green and yellow stars upgrades from disappearing upon comet prestige !<br><br>Requires both preceding star color upgrades to unlock it</span>Charge up some stars<br>and have 20% chance to<br>get red stars<br>
+	Requires <span id="TSUp3">1</span> dust</button>
 	<button type="button" onclick="newReset()" disabled class="tooltip"><span class="tooltiptext">Actually, it's the constellation one that works for it !</span>Reset the pattern</button><br>
 	<canvas id="myCanvas2" width="512" height="512"></canvas>
     </td>
@@ -172,12 +174,16 @@
 		<p>The server is pretty empty and the main purpose of it was not to be about that incremental game, but a RPG that i'm programming. Still, it has a Fourier bot you can mess with!</p>
 		<br>
 		<br>Changelog<br>
+		<br>0.6.3 Faster Starter<br>
+        I've heard from you all on my server or on reddit !<br>
+		As of now, almost all your concerns have been taken care of !<br>
+		If one of the fixes I've done isn't enough for you, tell me what's missing !<br>
 		<br>0.6.2 Seeing Red stars<br>
-                Some other bugs are being fixed, and you can progress further with this red star upgrade now !<br>
+        Some other bugs are being fixed, and you can progress further with this red star upgrade now !<br>
 		For the next prestige layer, you'll get to unlock new features along the way<br>
 		Feel free to tell me some feature you'd like to see happen on the discord !<br>
 		<br>0.6.1 All the little fix<br>
-                I fixed lots of typos and a bug where the bolt upgrades were locked upon comet prestige<br>
+        I fixed lots of typos and a bug where the bolt upgrades were locked upon comet prestige<br>
 		For the next prestige layer, you'll get to unlock new features along the way<br>
 		Feel free to tell me some feature you'd like to see happen on the discord !<br>
 		<br>0.6 Coming in : Comets !<br>
@@ -237,8 +243,10 @@
 		
 	</div>
 	<div id="Help" class="tabcontent" hidden>
-	The game is slow !/The game is laggy !<br><br>
-	The game starts slow because it will make you hit the laggy part later, i'm currently working on improving that but doesn't happen to make significant improvements...
+	<span style="color:#fff">Nerfs :<br><br>
+	After 1e10 of a ressource, each time your gain becomes 10x higher, your gain is brought to a power of 1/2<br><br>
+	All your stars (you begin with 2) can make up to a certain number of links with closests stars that havent got up to their limit (you begin with 1)<br>
+	Each link made per tick gives 1 base star point, that can be increased with further upgrades.</span>
 	</div>
 	<script>
     function openCity(evt, cityName, musicNum) {
@@ -261,7 +269,7 @@
 
     document.getElementById("StarsTab").click();
 	</script>
-	<!--客服 开始-->
+<!--客服 开始-->
 <script src="//g8hh.github.io/static/js/jquery.min.js"></script>
 <link rel="stylesheet" href="//g8hh.github.io/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
 <script src="//g8hh.github.io/static/js/kf.js"></script>
